Fix loadable size shifting based on message length

--- a/style/component/Loadable.scss
+++ b/style/component/Loadable.scss
@@ -57,11 +57,13 @@
 			top: 75%;
 			font-size: 20pt;
 			font-weight: 300;
+			width: 30%;
 		}
 		
 		&-message {
 			width: fit-content;
 			margin: auto;
+			text-align: center;
 		}
 		
 		&-bar {
